--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
     --bg-red-1: #C1605C;
     --bg-green-1: #224A54;
     --bg-black-2: #2B2F3C;
+    --bg-purple-1: #8E5EA2;
+    --bg-peach-light: #E9C3B8;
 }
 
 html {
@@ -294,13 +296,11 @@ svg {
 /* HEADER */
 
 .header {
-    /*height: clamp(200px, 500px, 800px);*/
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     align-items: center;
     justify-items: center;
-    width: auto;
 }
 
 .header h1 {
@@ -365,6 +365,8 @@ svg {
 .about-title {
     position: relative;
     top: 2.6rem;
+    width: 95%;
+    margin: auto;
 }
 
 .about-section {
@@ -372,6 +374,8 @@ svg {
     height: auto;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    width: 95%;
+    margin: auto;
 }
 
 .about-title, .services-title {
@@ -381,10 +385,10 @@ svg {
 .about-flex-art-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 30rem;
     height: 30rem;
     margin: auto;
-    margin-top: 4rem;
 }
 
 .rotate {
@@ -414,9 +418,10 @@ svg {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 0.2rem;
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 60%;
     gap: 0.5rem;
+    justify-content: center;
 }
 
 .about-flex-art-item {
@@ -424,7 +429,7 @@ svg {
     width: 100%;
     height: 100%;
     transition: all 200ms ease-out 100ms;
-    border-radius: 15px;
+    border-radius: 5%;
 }
 
 .about-flex-art-item:hover {
@@ -470,36 +475,74 @@ svg {
 .services {
     height: auto;
     background-color: var(--bg-green-1);
-    padding-bottom: 5rem;
+    width: 95%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 30% 70%;
 }
 
 .services-section {
     padding-top: 2rem;
+    padding-bottom: 2rem;
+    grid-column: 1 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .services-title {
     position: relative;  
     top: 2.6rem;
+    width: 95%;
+    margin: auto;
+}
+
+.services-1, .services-2 {
+    background-color: var(--bg-purple-1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .services-flex {
     width: 100%;
-    height: 35rem;
+    padding: 1rem 0;
+    height: 25rem;
+}
+
+.services-flex-box {
     display: flex;
     gap: 2rem;
     place-items: center;
     justify-content: center;
-    padding: 4rem 0;
+}
+
+.services-flex-grid {
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+    gap: 0.5rem;
+    justify-items: center;
+    align-items: center;
 }
 
 .services-flex-item {
     background-color: #FFF;
     height: 5rem;
     width: 5rem;
+    box-shadow: 0 2px 1px rgba(0,0,0,0.09), 
+              0 4px 2px rgba(0,0,0,0.09), 
+              0 8px 4px rgba(0,0,0,0.09), 
+              0 16px 8px rgba(0,0,0,0.09),
+              0 32px 16px rgba(0,0,0,0.09);
 }
 
 .flex-item-1 {
     transform: translateY(0px);
+}
+
+.services-2 {
+    background-color: var(--bg-red-1);
 }
 
 .services-buttons {
@@ -508,11 +551,79 @@ svg {
     justify-content: center;
 }
 
-.animation-play, .animation-pause {
-    border: 0.5rem solid #FFF;
+.animation-button {
     padding: 1rem;
     cursor: pointer;
     transition: all 300ms ease-in-out 100ms;
+}
+
+/* SECTION-3 */
+
+.section-3-title {
+    position: relative;
+    top: 2.6rem;
+    width: 95%;
+    margin: auto;
+}
+
+.section-3 {
+    height: auto;
+    width: 95%;
+    margin: auto;
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(3, 1fr);
+}
+.sec-3-sub-1 {
+    grid-column: 1 / 4;
+    background-color: var(--bg-peach-light);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.sec-3-sub-2 {
+    background-color: var(--bg-green-1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.sec-3-anime-1 {
+    width: 100px;
+    height: 100px;
+    background-color: #FFF;
+}
+
+.sec-3-sub-3 {
+    background-color: var(--bg-purple-1);
+}
+
+.sec-3-sub-4 {
+    background-color: var(--bg-black-2);
+}
+
+.sec-3-sub-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.sec-3-anime-2 {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    justify-content: center;
+    position: relative;
+}
+
+.square {
+    height: 2rem;
+    width: 2rem;
+    background-color: #FFF;
+    position: relative;
 }
 
 /* MEDIA QUERIES */
@@ -526,7 +637,7 @@ svg {
         letter-spacing: 1.5rem;
     }
 
-    .animation-play:hover, .animation-pause:hover {
+    .animation-button:hover {
         transform: scale(115%);
     } 
     
@@ -590,10 +701,41 @@ svg {
         letter-spacing: 1.5rem;
     }
 
-    .about-title, .services-title {
+    .about-title, .services-title, .section-3-title  {
         top: 1.3rem;
     }
-    
+
+    .services {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    .services-section {
+        grid-column: 1 / 2;
+    }
+
+    .services-1, .services-2 {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    .services-flex {
+        height: 15rem;
+    }
+
+    .services-flex-item {
+        width: 4rem;
+        height: 4rem;
+    }
+
+    .section-3 {
+        display: flex;
+        flex-direction: column;
+    }
+    .sec-3-sub-1 {
+        grid-column: 1 / 4;
+    }
+
 }
 
 @media (width <= 500px) {
@@ -619,7 +761,21 @@ svg {
         height: 10rem;
     }
 
-    .about-title, .services-title {
+    .about-title, .services-title, .section-3-title  {
         top: 1.1rem;
+    }
+
+    .about-flex-art-container {
+        width: 20rem;
+        height: 20rem;
+    }
+
+    .services-flex {
+        height: 10rem;
+    }
+    
+    .services-flex-item {
+        width: 2rem;
+        height: 2rem;
     }
 }
