--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,16 @@ svg {
 
 .fn-9 {font-size: 9rem;}
 
+.fn-16 {font-size: 16rem;}
+
+.title-section-font {
+    font-size: clamp(2.9rem, 4vw, 5.2rem);
+}
+
+.description-section-font {
+    font-size: clamp(2rem, 2.8vw, 3.5rem);
+}
+
 .uppercase {
     text-transform: uppercase;
 }
@@ -175,13 +185,13 @@ svg {
     height: 100%;
     width: 100%;
     background-color: #FFF;
-    transform: scaleY(0);
+    transform: scaleX(0);
     transition: all 400ms ease 100ms;
     z-index: -1;
 }
 
 .wrapper ul li a:hover:after {
-    transform: scaleY(1);
+    transform: scaleX(1);
 } 
 
 .wrapper ul li a:hover {
@@ -244,14 +254,9 @@ svg {
     letter-spacing: 1rem;
 }
 
-.navbar-name-container{
-    position: static;
-}
-
 .navbar-name {
     position: relative;
     text-decoration: none;
-    font-size: 4rem;
 }
 
 .navbar-name:hover {
@@ -264,7 +269,7 @@ svg {
     position: absolute;
     display: block;
     width: 100%;
-    height: 5px;
+    height: 2.5px;
     bottom: 0;
     left: 0;
     background-color: #FFF;
@@ -301,6 +306,7 @@ svg {
     grid-template-rows: repeat(2, 1fr);
     align-items: center;
     justify-items: center;
+    height: 70vh; /* EXPERIMENTAL */
 }
 
 .header h1 {
@@ -369,13 +375,16 @@ svg {
     margin: auto;
 }
 
-.about-section {
+.about {
     background-color: var(--bg-black-2);
-    height: auto;
+    height: 80vh; /* EXPERIMENTAL height */
     padding-top: 2rem;
     padding-bottom: 2rem;
     width: 95%;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    /*justify-content: space-between;*/
 }
 
 .about-title, .services-title {
@@ -386,8 +395,12 @@ svg {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: clamp(12rem, 40%, 25rem);
+    height: clamp(10rem, 40%, 25rem);
+    /*
     width: 30rem;
     height: 30rem;
+    */
     margin: auto;
 }
 
@@ -418,8 +431,8 @@ svg {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 0.2rem;
-    width: 60%;
-    height: 60%;
+    width: 100%;
+    height: 100%;
     gap: 0.5rem;
     justify-content: center;
 }
@@ -474,7 +487,6 @@ svg {
 
 .services {
     height: auto;
-    background-color: var(--bg-green-1);
     width: 95%;
     margin: auto;
     display: grid;
@@ -484,11 +496,10 @@ svg {
 
 .services-section {
     padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
     grid-column: 1 / 3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
+    background-color: var(--bg-green-1);
 }
 
 .services-title {
@@ -498,8 +509,15 @@ svg {
     margin: auto;
 }
 
-.services-1, .services-2 {
+.services-section, .services-1 .services-2 {
+    height: clamp(250px, 70vh, 600px);
+}
+
+.services-1 {
     background-color: var(--bg-purple-1);
+}
+
+.services-1, .services-2 {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -528,17 +546,13 @@ svg {
 
 .services-flex-item {
     background-color: #FFF;
-    height: 5rem;
-    width: 5rem;
+    height: clamp(6rem, 40%, 8rem);
+    width: clamp(6rem, 40%, 8rem);
     box-shadow: 0 2px 1px rgba(0,0,0,0.09), 
               0 4px 2px rgba(0,0,0,0.09), 
               0 8px 4px rgba(0,0,0,0.09), 
               0 16px 8px rgba(0,0,0,0.09),
               0 32px 16px rgba(0,0,0,0.09);
-}
-
-.flex-item-1 {
-    transform: translateY(0px);
 }
 
 .services-2 {
@@ -579,6 +593,7 @@ svg {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    height: 70vh;
 }
 
 
@@ -587,13 +602,20 @@ svg {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     gap: 2rem;
+    height: 70vh;
 }
 
 .sec-3-anime-1 {
     width: 100px;
     height: 100px;
     background-color: #FFF;
+    box-shadow: 0 2px 1px rgba(0,0,0,0.5), 
+              0 4px 2px rgba(0,0,0,0.5), 
+              0 8px 4px rgba(0,0,0,0.8), 
+              0 16px 8px rgba(0,0,0,0.5),
+              0 32px 16px rgba(0,0,0,0.25);
 }
 
 .sec-3-sub-3 {
@@ -608,7 +630,9 @@ svg {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     gap: 2rem;
+    height: 70vh;
 }
 
 .sec-3-anime-2 {
@@ -622,8 +646,22 @@ svg {
 .square {
     height: 2rem;
     width: 2rem;
-    background-color: #FFF;
+    /*background-color: #FFF;*/
     position: relative;
+    box-shadow: 0 2px 1px rgba(0,0,0,0.5), 
+              0 4px 2px rgba(0,0,0,0.5), 
+              0 8px 4px rgba(0,0,0,0.3), 
+              0 16px 8px rgba(0,0,0,0.5),
+              0 32px 16px rgba(0,0,0,0.25);
+}
+
+.sec-3-sub-4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 2rem;
+    height: 70vh;
 }
 
 /* MEDIA QUERIES */
