--- a/styles.css
+++ b/styles.css
@@ -354,22 +354,31 @@ svg {
 
 /* TITLE */
 
-.ml6 {
+.relative {
     position: relative;
-    font-weight: 900;
-    font-size: 3.3em;
 }
 
-.ml6 .text-wrapper {
-    position: relative;
+.inline-block {
     display: inline-block;
-    padding-top: 0.2em;
-    padding-right: 0.05em;
-    padding-bottom: 0.1em;
+}
+
+.overflow {
     overflow: hidden;
 }
 
-.ml6 .letter {
+.header-text {
+    position: relative;
+}
+
+.text-wrapper {
+    position: relative;
+    padding-top: 0.2rem;
+    padding-right: 0.05rem;
+    padding-bottom: 0.2rem;
+    overflow: hidden;
+}
+
+.letter {
     display: inline-block;
     line-height: 1em;
 }
