added slider, images and slider code

--- a/styles.css
+++ b/styles.css
@@ -177,29 +177,6 @@ svg {
     margin-top: 3rem;
 }
 
-/*SLIDER BUTTONS and SLIDER */
-
-.buttons-slider {
-    display: flex;
-    justify-content: center;
-    gap: 5rem;
-}
-
-.slide-flex {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-}
-
-.slide > p {
-    font-size: clamp(2rem, 2.9vw, 3.8rem);
-}
-
-.prev-button, .next-button {
-    font-size: 10rem;
-    cursor: pointer;
-}
-
 /* MENU */
 
 .wrapper {
@@ -786,10 +763,88 @@ svg {
 
 .section-5-name {
     background-color: var(--bg-green-1);
-    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 2rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+/*SLIDER BUTTONS and SLIDER */
+
+.buttons-slider {
+    display: flex;
+    justify-content: center;
+    gap: 10rem;
+}
+
+.slide-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.slide > p {
+    font-size: clamp(2rem, 2.9vw, 3.8rem);
+}
+
+.prev-button, .next-button {
+     font-size: 1.8rem;
+     text-align: center;
+     cursor: pointer;
+     width: 4rem;
+     height: 4rem;
+     padding: 1rem;
+     border: none;
+     border-radius: 50%;
+     font-weight: bold;
+     z-index: 3;
+     cursor: pointer;
+     background-color: black;
+     color: #FFF;
+}
+ /*
+ .btn-prev {
+     top: -45%;
+     left: 3%;
+ }
+ 
+ .btn-next {
+     top: -45%;
+     right: 3%;
+ }
+ */
+
+.number-display {
+    margin-bottom: 2rem;
+}
+
+/*IMAGES SLIDER*/
+
+.slider {
+    width: 100%;
+    max-width: 100%;
+    height: 680px;
+    display: flex;
+    justify-content: center;
+    overflow: hidden; /* <===  */
+    border-radius: 15px;
+}
+
+.slide {
+    width: 90%;
+    max-width: 850px;
+    height: auto;
+    /*position: absolute;*/
+    transition: all 0.5s;
+}
+
+.slide img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 20px;
 }
 
 /*SECTION tools */
@@ -891,9 +946,6 @@ svg {
     height: 70vh;
 }
 
-
-
-
 /* MEDIA QUERIES */
 
 @media (width >= 769px) {
@@ -913,6 +965,7 @@ svg {
     .card:hover ~ .card {
         left: 55px;
     }
+
     
 }
 
@@ -1010,6 +1063,10 @@ svg {
         left: 55px;
     }
 
+    .slider {
+        height: 440px;
+    }
+
 }
 
 @media (width <= 500px) {
@@ -1052,5 +1109,13 @@ svg {
         width: 2rem;
         height: 2rem;
     }
+
+    .buttons-slider {
+        gap: 2rem;
+    }
+    .slider {
+        height: 315px;
+    }
+    
 }
 
