--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ svg {
     right: 0;
     height: 100%;
     width: 100%;
-    z-index: 2;
+    z-index: 4;
     background-color: var(--bg-green-1);
     clip-path: circle(0px at calc(100% - 45px) 45px);
     transition: clip-path 800ms;
@@ -198,8 +198,9 @@ svg {
     transform: translate(-50%, -50%);
     text-align: center;
 }
+
 .wrapper ul li {
-    margin: 5rem 0;
+    margin: 2rem 0;
 }
 
 .wrapper ul li a {
@@ -231,7 +232,7 @@ svg {
 }
 
 .navbar-menu {
-    z-index: 2;
+    z-index: 4;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -527,20 +528,27 @@ svg {
 /* SERVICES */
 
 .services {
-    height: auto;
     width: 95%;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 30% 70%;
 }
 
 .services-section {
+    height: auto;
     padding-top: 2rem;
     padding-bottom: 1rem;
     grid-column: 1 / 3;
-    
     background-color: var(--bg-green-1);
+}
+
+.design-first-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 2rem;
+    height: 100%;
 }
 
 .services-title {
@@ -550,8 +558,9 @@ svg {
     margin: auto;
 }
 
-.services-section, .services-1 .services-2 {
+.services-section, .services-1, .services-2 {
     height: clamp(250px, 70vh, 600px);
+    padding: 5rem;
 }
 
 .services-1 {
@@ -944,7 +953,53 @@ svg {
 .section-6-name {
     background-color: var(--bg-black-2);
     height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.container-section-6-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    width: 90%;
+}
+#contact-name {
+    border-radius: 10px;
+    padding: 1rem;
+    display: block;
+}
+
+#contact-email {
+    border-radius: 10px;
+    padding: 1rem;
+    display: block;
+}
+
+#contact-phone {
+    border-radius: 10px;
+    padding: 1rem;
+    display: block;
+}
+
+#contact-mensaje {
+    border-radius: 10px;
+    display: block;
+}
+
+.submit-message {
+    display: block;
+    border-radius: 10px;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: var(--bg-red-1);
+    color: white;
+    cursor: pointer;
+}
+
+
 
 /* MEDIA QUERIES */
 
@@ -966,7 +1021,21 @@ svg {
         left: 55px;
     }
 
-    
+    #contact-name, #contact-email, #contact-phone, #contact-mensaje, .submit-message {
+        width: 700px;
+    }
+
+}
+
+/*FOOTER*/
+
+.footer {
+    background-color: var(--bg-black-1);
+    height: 100px;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    margin-top: 2rem;
 }
 
 @media (width <= 768px) {
@@ -1010,7 +1079,7 @@ svg {
         justify-self: flex-end;
     }
 
-    .navbar-icons {
+    .icons-navbar{
         display: none;
     }
 
@@ -1054,18 +1123,19 @@ svg {
         grid-column: 1 / 4;
     }
 
-    .card:active {
+    .card:hover {
         transform: translateY(-18px);
         font-weight: 900;
         cursor: pointer;
     }
-    .card:active ~ .card {
+    .card:hover ~ .card {
         left: 55px;
     }
 
-    .slider {
-        height: 440px;
+    #contact-name, #contact-email, #contact-phone, #contact-mensaje, .submit-message {
+        width: 450px;
     }
+
 
 }
 
@@ -1115,6 +1185,19 @@ svg {
     }
     .slider {
         height: 315px;
+    }
+
+    #contact-name, #contact-email, #contact-phone, #contact-mensaje, .submit-message {
+        width: 250px;
+    }
+
+    .card:hover {
+        transform: translateY(-18px);
+        font-weight: 900;
+        cursor: pointer;
+    }
+    .card:hover ~ .card {
+        left: 55px;
     }
     
 }
